// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentContainer Delete button 1`] = `
<CommentWrapper
  comment={
    Object {
      "_created": 1000,
      "_id": "test",
      "comment": "comment_test",
      "user": Object {
        "name": "Benny Cosmos",
        "openplatformId": "1234",
      },
    }
  }
  deleteComment={[MockFunction]}
  user={
    Object {
      "name": "Benny Cosmos",
      "openplatformId": "1234",
    }
  }
>
  <div
    className="comment-wrapper"
    key="test"
  >
    <ContextMenu
      className="comment-wrapper-context-menu"
    >
      <div
        className="ContextMenu comment-wrapper-context-menu"
      >
        <div
          className="dropdown-toggle"
          onClick={[Function]}
        >
          <Icon
            alt="Rediger"
            className="align-middle"
            name="more_vert"
          >
            <i
              aria-label="Rediger"
              className="material-icons material-icons-more_vert align-middle "
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#xE5D4;",
                }
              }
              data-unicoded="true"
              onClick={[Function]}
              role=""
            />
          </Icon>
        </div>
        <div
          className="dropdown dropdown-right"
        >
          <ContextMenuAction
            icon="edit"
            onClick={[Function]}
            title="Rediger kommentar"
          >
            <div
              className="dropdown-item"
              data-cy="context-menu-action"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="edit"
              >
                <i
                  aria-label=""
                  className="material-icons material-icons-edit align-middle mr-2 "
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#xE3C9;",
                    }
                  }
                  data-unicoded="true"
                  onClick={[Function]}
                  role=""
                />
              </Icon>
              <span
                className="align-middle"
              >
                Rediger kommentar
              </span>
            </div>
          </ContextMenuAction>
          <ContextMenuAction
            icon="delete"
            onClick={[Function]}
            title="Slet kommentar"
          >
            <div
              className="dropdown-item"
              data-cy="context-menu-action"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="delete"
              >
                <i
                  aria-label=""
                  className="material-icons material-icons-delete align-middle mr-2 "
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#xE872;",
                    }
                  }
                  data-unicoded="true"
                  onClick={[Function]}
                  role=""
                />
              </Icon>
              <span
                className="align-middle"
              >
                Slet kommentar
              </span>
            </div>
          </ContextMenuAction>
        </div>
      </div>
    </ContextMenu>
    <div
      className="d-flex align-items-center mb-3 w-100"
    >
      <div
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <div
          className="comment d-flex"
        >
          <ProfileImage
            id="1234"
            size="40"
            style={
              Object {
                "marginRight": "15px",
                "marginTop": "10px",
              }
            }
          />
          <div
            className="d-flex flex-column w-100"
          >
            <Text
              className="mb-1"
              type="small"
              variant="color-due"
            >
              <p
                className="mb-1 Text Text__small Text__small--color-due"
              >
                1. januar 1970
              </p>
            </Text>
            <div
              className="comment-nameComment-wrap"
            >
              <Text
                className="d-inline"
                type="large"
              >
                <span
                  className="d-inline Text Text__large "
                >
                  Benny Cosmos
                </span>
              </Text>
              <div
                className="d-inline ml-2"
              >
                comment_test
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</CommentWrapper>
`;

exports[`CommentContainer Edit button 1`] = `
<CommentWrapper
  comment={
    Object {
      "_created": 1000,
      "_id": "test",
      "comment": "comment_test",
      "user": Object {
        "name": "Benny Cosmos",
        "openplatformId": "1234",
      },
    }
  }
  user={
    Object {
      "name": "Benny Cosmos",
      "openplatformId": "1234",
    }
  }
>
  <div
    className="comment-wrapper"
    key="test"
  >
    <ContextMenu
      className="comment-wrapper-context-menu"
    >
      <div
        className="ContextMenu comment-wrapper-context-menu"
      >
        <div
          className="dropdown-toggle"
          onClick={[Function]}
        >
          <Icon
            alt="Rediger"
            className="align-middle"
            name="more_vert"
          >
            <i
              aria-label="Rediger"
              className="material-icons material-icons-more_vert align-middle "
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#xE5D4;",
                }
              }
              data-unicoded="true"
              onClick={[Function]}
              role=""
            />
          </Icon>
        </div>
        <div
          className="dropdown dropdown-right"
        >
          <ContextMenuAction
            icon="edit"
            onClick={[Function]}
            title="Rediger kommentar"
          >
            <div
              className="dropdown-item"
              data-cy="context-menu-action"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="edit"
              >
                <i
                  aria-label=""
                  className="material-icons material-icons-edit align-middle mr-2 "
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#xE3C9;",
                    }
                  }
                  data-unicoded="true"
                  onClick={[Function]}
                  role=""
                />
              </Icon>
              <span
                className="align-middle"
              >
                Rediger kommentar
              </span>
            </div>
          </ContextMenuAction>
          <ContextMenuAction
            icon="delete"
            onClick={[Function]}
            title="Slet kommentar"
          >
            <div
              className="dropdown-item"
              data-cy="context-menu-action"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="delete"
              >
                <i
                  aria-label=""
                  className="material-icons material-icons-delete align-middle mr-2 "
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#xE872;",
                    }
                  }
                  data-unicoded="true"
                  onClick={[Function]}
                  role=""
                />
              </Icon>
              <span
                className="align-middle"
              >
                Slet kommentar
              </span>
            </div>
          </ContextMenuAction>
        </div>
      </div>
    </ContextMenu>
    <div
      className="d-flex align-items-center mb-3 w-100"
    >
      <div
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <div
          className="comment d-flex"
        >
          <ProfileImage
            id="1234"
            size="40"
            style={
              Object {
                "marginRight": "15px",
                "marginTop": "10px",
              }
            }
          />
          <div
            className="d-flex flex-column w-100"
          >
            <Text
              className="mb-1"
              type="small"
              variant="color-due"
            >
              <p
                className="mb-1 Text Text__small Text__small--color-due"
              >
                1. januar 1970
              </p>
            </Text>
            <div
              className="comment-nameComment-wrap"
            >
              <Text
                className="d-inline"
                type="large"
              >
                <span
                  className="d-inline Text Text__large "
                >
                  Benny Cosmos
                </span>
              </Text>
              <div
                className="d-inline ml-2"
              >
                comment_test
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</CommentWrapper>
`;

exports[`CommentContainer Edit button 2`] = `
<CommentWrapper
  comment={
    Object {
      "_created": 1000,
      "_id": "test",
      "comment": "comment_test",
      "user": Object {
        "name": "Benny Cosmos",
        "openplatformId": "1234",
      },
    }
  }
  user={
    Object {
      "name": "Benny Cosmos",
      "openplatformId": "1234",
    }
  }
>
  <div
    className="comment-wrapper"
    key="test"
  >
    <ContextMenu
      className="comment-wrapper-context-menu"
    >
      <div
        className="ContextMenu comment-wrapper-context-menu"
      >
        <div
          className="dropdown-toggle"
          onClick={[Function]}
        >
          <Icon
            alt="Rediger"
            className="align-middle"
            name="more_vert"
          >
            <i
              aria-label="Rediger"
              className="material-icons material-icons-more_vert align-middle "
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#xE5D4;",
                }
              }
              data-unicoded="true"
              onClick={[Function]}
              role=""
            />
          </Icon>
        </div>
        <div
          className="dropdown dropdown-right"
        >
          <ContextMenuAction
            icon="edit"
            onClick={[Function]}
            title="Rediger kommentar"
          >
            <div
              className="dropdown-item"
              data-cy="context-menu-action"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="edit"
              >
                <i
                  aria-label=""
                  className="material-icons material-icons-edit align-middle mr-2 "
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#xE3C9;",
                    }
                  }
                  data-unicoded="true"
                  onClick={[Function]}
                  role=""
                />
              </Icon>
              <span
                className="align-middle"
              >
                Rediger kommentar
              </span>
            </div>
          </ContextMenuAction>
          <ContextMenuAction
            icon="delete"
            onClick={[Function]}
            title="Slet kommentar"
          >
            <div
              className="dropdown-item"
              data-cy="context-menu-action"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="delete"
              >
                <i
                  aria-label=""
                  className="material-icons material-icons-delete align-middle mr-2 "
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#xE872;",
                    }
                  }
                  data-unicoded="true"
                  onClick={[Function]}
                  role=""
                />
              </Icon>
              <span
                className="align-middle"
              >
                Slet kommentar
              </span>
            </div>
          </ContextMenuAction>
        </div>
      </div>
    </ContextMenu>
    <div
      className="d-flex align-items-center mb-3 w-100"
    >
      <div
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <CommentInput
          autoFocus={true}
          editing={true}
          error={null}
          onCancel={[Function]}
          onChange={[Function]}
          onDelete={[Function]}
          onSubmit={[Function]}
          user={
            Object {
              "name": "Benny Cosmos",
              "openplatformId": "1234",
            }
          }
          value="comment_test"
        >
          <div
            className="comment-textarea-wrap mb-3 d-flex "
            style={
              Object {
                "marginTop": "10px",
              }
            }
          >
            <ProfileImage
              id="1234"
              size="40"
              style={
                Object {
                  "marginRight": "15px",
                }
              }
            />
            <div
              className="d-flex flex-wrap align-items-center w-100 "
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                className="d-flex w-100"
                style={
                  Object {
                    "border": "1px solid #E9EAEB",
                    "overflow": "hidden",
                  }
                }
              >
                <textarea
                  autoFocus={true}
                  className="comment-textarea border-0 pl-3"
                  data-cy="comment-input"
                  name="list-description"
                  onChange={[Function]}
                  placeholder="Din kommentar ..."
                  value="comment_test"
                />
                <Icon
                  className="comment-submit-icon align-self-end"
                  id="comment-submit"
                  name="check"
                  onClick={[Function]}
                >
                  <i
                    aria-label=""
                    className="material-icons material-icons-check comment-submit-icon align-self-end "
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "&#xE5CA;",
                      }
                    }
                    data-unicoded="true"
                    id="comment-submit"
                    onClick={[Function]}
                    role=""
                  />
                </Icon>
              </div>
            </div>
          </div>
        </CommentInput>
      </div>
    </div>
  </div>
</CommentWrapper>
`;

exports[`CommentContainer Render comment 1`] = `
<div
  className="comment-wrapper"
>
  
  <div
    className="d-flex align-items-center mb-3 w-100"
  >
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <div
        className="comment d-flex"
      >
        <ProfileImage
          id="1234"
          size="40"
          style={
            Object {
              "marginRight": "15px",
              "marginTop": "10px",
            }
          }
        />
        <div
          className="d-flex flex-column w-100"
        >
          <p
            className="mb-1 Text Text__small Text__small--color-due"
          >
            1. januar 1970
          </p>
          <div
            className="comment-nameComment-wrap"
          >
            <span
              className="d-inline Text Text__large "
            >
              Benny Cosmos
            </span>
            <div
              className="d-inline ml-2"
            >
              comment_test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CommentContainer Render edit form 1`] = `
<div
  className="comment-wrapper"
>
  
  <div
    className="ContextMenu comment-wrapper-context-menu"
  >
    <div
      className="dropdown-toggle"
      onClick={[Function]}
    >
      <i
        aria-label="Rediger"
        className="material-icons material-icons-more_vert align-middle "
        dangerouslySetInnerHTML={
          Object {
            "__html": "&#xE5D4;",
          }
        }
        data-unicoded="true"
        onClick={[Function]}
        role=""
      />
      
    </div>
    <div
      className="dropdown dropdown-right"
    >
      <div
        className="dropdown-item"
        data-cy="context-menu-action"
        onClick={[Function]}
      >
        <i
          aria-label=""
          className="material-icons material-icons-edit align-middle mr-2 "
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#xE3C9;",
            }
          }
          data-unicoded="true"
          onClick={[Function]}
          role=""
        />
        <span
          className="align-middle"
        >
          Rediger kommentar
        </span>
      </div>
      <div
        className="dropdown-item"
        data-cy="context-menu-action"
        onClick={[Function]}
      >
        <i
          aria-label=""
          className="material-icons material-icons-delete align-middle mr-2 "
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#xE872;",
            }
          }
          data-unicoded="true"
          onClick={[Function]}
          role=""
        />
        <span
          className="align-middle"
        >
          Slet kommentar
        </span>
      </div>
    </div>
  </div>
  <div
    className="d-flex align-items-center mb-3 w-100"
  >
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <div
        className="comment d-flex"
      >
        <ProfileImage
          id="1234"
          size="40"
          style={
            Object {
              "marginRight": "15px",
              "marginTop": "10px",
            }
          }
        />
        <div
          className="d-flex flex-column w-100"
        >
          <p
            className="mb-1 Text Text__small Text__small--color-due"
          >
            1. januar 1970
          </p>
          <div
            className="comment-nameComment-wrap"
          >
            <span
              className="d-inline Text Text__large "
            >
              Benny Cosmos
            </span>
            <div
              className="d-inline ml-2"
            >
              comment_test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CommentContainer Render save form 1`] = `
<div
  className="comment-wrapper"
>
  <div
    className="comment-saving"
  >
    <span
      className="spinner "
      style={
        Object {
          "borderBottomColor": "transparent",
          "borderColor": "var(--deYork)",
          "borderTopColor": null,
          "display": "inline-block",
          "height": "30px",
          "width": "30px",
        }
      }
    />
  </div>
  <div
    className="ContextMenu comment-wrapper-context-menu"
  >
    <div
      className="dropdown-toggle"
      onClick={[Function]}
    >
      <i
        aria-label="Rediger"
        className="material-icons material-icons-more_vert align-middle "
        dangerouslySetInnerHTML={
          Object {
            "__html": "&#xE5D4;",
          }
        }
        data-unicoded="true"
        onClick={[Function]}
        role=""
      />
      
    </div>
    <div
      className="dropdown dropdown-right"
    >
      <div
        className="dropdown-item"
        data-cy="context-menu-action"
        onClick={[Function]}
      >
        <i
          aria-label=""
          className="material-icons material-icons-edit align-middle mr-2 "
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#xE3C9;",
            }
          }
          data-unicoded="true"
          onClick={[Function]}
          role=""
        />
        <span
          className="align-middle"
        >
          Rediger kommentar
        </span>
      </div>
      <div
        className="dropdown-item"
        data-cy="context-menu-action"
        onClick={[Function]}
      >
        <i
          aria-label=""
          className="material-icons material-icons-delete align-middle mr-2 "
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#xE872;",
            }
          }
          data-unicoded="true"
          onClick={[Function]}
          role=""
        />
        <span
          className="align-middle"
        >
          Slet kommentar
        </span>
      </div>
    </div>
  </div>
  <div
    className="d-flex align-items-center mb-3 w-100"
  >
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <div
        className="comment d-flex"
      >
        <ProfileImage
          id="1234"
          size="40"
          style={
            Object {
              "marginRight": "15px",
              "marginTop": "10px",
            }
          }
        />
        <div
          className="d-flex flex-column w-100"
        >
          <p
            className="mb-1 Text Text__small Text__small--color-due"
          >
            1. januar 1970
          </p>
          <div
            className="comment-nameComment-wrap"
          >
            <span
              className="d-inline Text Text__large "
            >
              Benny Cosmos
            </span>
            <div
              className="d-inline ml-2"
            >
              comment_test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CommentContainer Save button 1`] = `
<CommentWrapper
  comment={
    Object {
      "_created": 1000,
      "_id": "test",
      "comment": "comment_test",
      "user": Object {
        "name": "Benny Cosmos",
        "openplatformId": "1234",
      },
    }
  }
  editComment={[MockFunction]}
  toggleEdit={[MockFunction]}
  user={
    Object {
      "name": "Benny Cosmos",
      "openplatformId": "1234",
    }
  }
>
  <div
    className="comment-wrapper"
    key="test"
  >
    <ContextMenu
      className="comment-wrapper-context-menu"
    >
      <div
        className="ContextMenu comment-wrapper-context-menu"
      >
        <div
          className="dropdown-toggle"
          onClick={[Function]}
        >
          <Icon
            alt="Rediger"
            className="align-middle"
            name="more_vert"
          >
            <i
              aria-label="Rediger"
              className="material-icons material-icons-more_vert align-middle "
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#xE5D4;",
                }
              }
              data-unicoded="true"
              onClick={[Function]}
              role=""
            />
          </Icon>
        </div>
        <div
          className="dropdown dropdown-right"
        >
          <ContextMenuAction
            icon="edit"
            onClick={[Function]}
            title="Rediger kommentar"
          >
            <div
              className="dropdown-item"
              data-cy="context-menu-action"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="edit"
              >
                <i
                  aria-label=""
                  className="material-icons material-icons-edit align-middle mr-2 "
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#xE3C9;",
                    }
                  }
                  data-unicoded="true"
                  onClick={[Function]}
                  role=""
                />
              </Icon>
              <span
                className="align-middle"
              >
                Rediger kommentar
              </span>
            </div>
          </ContextMenuAction>
          <ContextMenuAction
            icon="delete"
            onClick={[Function]}
            title="Slet kommentar"
          >
            <div
              className="dropdown-item"
              data-cy="context-menu-action"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="delete"
              >
                <i
                  aria-label=""
                  className="material-icons material-icons-delete align-middle mr-2 "
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#xE872;",
                    }
                  }
                  data-unicoded="true"
                  onClick={[Function]}
                  role=""
                />
              </Icon>
              <span
                className="align-middle"
              >
                Slet kommentar
              </span>
            </div>
          </ContextMenuAction>
        </div>
      </div>
    </ContextMenu>
    <div
      className="d-flex align-items-center mb-3 w-100"
    >
      <div
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <div
          className="comment d-flex"
        >
          <ProfileImage
            id="1234"
            size="40"
            style={
              Object {
                "marginRight": "15px",
                "marginTop": "10px",
              }
            }
          />
          <div
            className="d-flex flex-column w-100"
          >
            <Text
              className="mb-1"
              type="small"
              variant="color-due"
            >
              <p
                className="mb-1 Text Text__small Text__small--color-due"
              >
                1. januar 1970
              </p>
            </Text>
            <div
              className="comment-nameComment-wrap"
            >
              <Text
                className="d-inline"
                type="large"
              >
                <span
                  className="d-inline Text Text__large "
                >
                  Benny Cosmos
                </span>
              </Text>
              <div
                className="d-inline ml-2"
              >
                comment_test
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</CommentWrapper>
`;
